fix: WorkItemCompleteDialog component overflow when Virtual Keyboard is enabled

--- a/apps/ministry-maps/src/app/features/work/components/work-item-complete-dialog/work-item-complete-dialog.component.scss
+++ b/apps/ministry-maps/src/app/features/work/components/work-item-complete-dialog/work-item-complete-dialog.component.scss
@@ -1,3 +1,6 @@
 :host {
   display: block;
+
+  max-height: 80vh;
+  overflow-y: auto;
 }
